[gd_scene load_steps=22 format=3 uid="uid://bwxlbbvof27gs"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_0sabw"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_vcdew"]
[ext_resource type="Material" uid="uid://b5sldrusscyhx" path="res://mat/red.tres" id="5_i0kgw"]
[ext_resource type="Material" uid="uid://dbjx2o3b5hpb1" path="res://mat/blue.tres" id="5_iqt22"]
[ext_resource type="PackedScene" uid="uid://dkb0vk52b8tf1" path="res://scenes/base.tscn" id="5_r7okm"]
[ext_resource type="Material" uid="uid://cevw4m71edpm6" path="res://mat/green.tres" id="7_bejnr"]
[ext_resource type="Texture2D" uid="uid://csp371y8ctbji" path="res://roadman.png" id="7_iqpoq"]
[ext_resource type="Texture2D" uid="uid://nfl5p54vcvt7" path="res://assets/gaiman.png" id="8_0p713"]
[ext_resource type="Texture2D" uid="uid://biu4yxyvgmy63" path="res://assets/yungin.png" id="9_p76cg"]
[ext_resource type="Texture2D" uid="uid://21abat3t0k76" path="res://assets/grini.png" id="10_5kcm1"]
[ext_resource type="Texture2D" uid="uid://c5pdvtt0m4pf1" path="res://assets/zootman.png" id="11_p3ods"]
[ext_resource type="Texture2D" uid="uid://ckd5y67rqdhmo" path="res://assets/weeb.png" id="12_6xjfn"]
[ext_resource type="Texture2D" uid="uid://d0wwoqxmv5nhr" path="res://assets/ZAK.png" id="13_3f2py"]
[ext_resource type="Texture2D" uid="uid://127ukb6cfb0p" path="res://assets/sayad.png" id="14_afgsm"]
[ext_resource type="Texture2D" uid="uid://cc8ekyi0sjr7j" path="res://assets/nsab.png" id="15_pi45k"]
[ext_resource type="Texture2D" uid="uid://cxri4nqe8t4d5" path="res://assets/conman.png" id="16_sjuuo"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_j45q5"]
sky_top_color = Color(0.647581, 0.707502, 0.83071, 1)
sky_horizon_color = Color(0.697095, 0.716365, 0.762677, 1)
ground_bottom_color = Color(0.1408, 0.15796, 0.22, 1)
ground_horizon_color = Color(0.697095, 0.716365, 0.762677, 1)

[sub_resource type="Sky" id="Sky_by3tj"]
sky_material = SubResource("ProceduralSkyMaterial_j45q5")

[sub_resource type="Environment" id="Environment_nrt6p"]
background_mode = 2
sky = SubResource("Sky_by3tj")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="SphereShape3D" id="SphereShape3D_78481"]

[sub_resource type="PlaneMesh" id="PlaneMesh_cpcye"]
size = Vector2(500, 500)

[node name="main" type="Node3D"]
script = ExtResource("1_0sabw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_nrt6p")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.960294, -0.120548, 0.251603, 0, 0.901833, 0.432086, -0.278991, 0.414929, -0.866024, 0, 0, 0)
light_energy = 1.5
shadow_enabled = true

[node name="plyr" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0883883, 0, 0.0366117)
collision_layer = 0
script = ExtResource("2_vcdew")

[node name="Camera3D" type="Camera3D" parent="plyr"]
transform = Transform3D(1, 0, 0, 0, 0.707106, 0.707107, 0, -0.707106, 0.707107, 0, 50, 50)

[node name="CollisionShape3D" type="CollisionShape3D" parent="plyr"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_78481")

[node name="CSGSphere3D" type="CSGSphere3D" parent="plyr"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false

[node name="base1" parent="." instance=ExtResource("5_r7okm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -170, 0, 0)
material_override = ExtResource("5_iqt22")

[node name="base2" parent="." instance=ExtResource("5_r7okm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 170, 0, 0)
material_override = ExtResource("5_i0kgw")
team = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="map" type="Node3D" parent="."]

[node name="border2" type="CSGBox3D" parent="map"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1, 100)
transparency = 0.98
cast_shadow = 0
use_collision = true
size = Vector3(20, 2, 400)

[node name="border1" type="CSGBox3D" parent="map"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1, -100)
transparency = 0.98
cast_shadow = 0
use_collision = true
size = Vector3(20, 2, 400)

[node name="border3" type="CSGBox3D" parent="map"]
transform = Transform3D(1, 0, -1.19209e-07, 0, 1, 0, 1.19209e-07, 0, 1, -200, 1, 0)
transparency = 0.98
cast_shadow = 0
use_collision = true
size = Vector3(20, 2, 250)

[node name="border4" type="CSGBox3D" parent="map"]
transform = Transform3D(1, 0, -1.19209e-07, 0, 1, 0, 1.19209e-07, 0, 1, 200, 1, 0)
transparency = 0.98
cast_shadow = 0
use_collision = true
size = Vector3(20, 2, 250)

[node name="ground" type="CSGMesh3D" parent="map"]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
use_collision = true
mesh = SubResource("PlaneMesh_cpcye")
material = ExtResource("7_bejnr")

[node name="team1" type="VBoxContainer" parent="."]

[node name="hp" type="HBoxContainer" parent="team1"]
layout_mode = 2

[node name="hp_img" type="TextureRect" parent="team1/hp"]
layout_mode = 2
texture = ExtResource("7_iqpoq")

[node name="hp_txt" type="Label" parent="team1/hp"]
layout_mode = 2
text = "100"

[node name="money" type="HBoxContainer" parent="team1"]
layout_mode = 2

[node name="money_img" type="TextureRect" parent="team1/money"]
layout_mode = 2
texture = ExtResource("7_iqpoq")

[node name="money_txt" type="Label" parent="team1/money"]
layout_mode = 2
text = "100"

[node name="team2" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 68.0
grow_horizontal = 0

[node name="hp" type="HBoxContainer" parent="team2"]
layout_mode = 2

[node name="hp_img" type="TextureRect" parent="team2/hp"]
layout_mode = 2
texture = ExtResource("7_iqpoq")

[node name="hp_txt" type="Label" parent="team2/hp"]
layout_mode = 2
text = "100"
horizontal_alignment = 2

[node name="money" type="HBoxContainer" parent="team2"]
layout_mode = 2

[node name="money_img" type="TextureRect" parent="team2/money"]
layout_mode = 2
texture = ExtResource("7_iqpoq")

[node name="money_txt" type="Label" parent="team2/money"]
layout_mode = 2
text = "100"
horizontal_alignment = 2

[node name="unites" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -135.0
offset_right = 555.0
grow_vertical = 0
size_flags_vertical = 8

[node name="1" type="VBoxContainer" parent="unites"]
layout_mode = 2
alignment = 2

[node name="img" type="TextureRect" parent="unites/1"]
layout_mode = 2
texture = ExtResource("8_0p713")
expand_mode = 5

[node name="price" type="Label" parent="unites/1"]
custom_minimum_size = Vector2(57, 10)
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="2" type="VBoxContainer" parent="unites"]
layout_mode = 2
alignment = 2

[node name="img" type="TextureRect" parent="unites/2"]
layout_mode = 2
texture = ExtResource("9_p76cg")
expand_mode = 5

[node name="price" type="Label" parent="unites/2"]
custom_minimum_size = Vector2(57, 10)
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="3" type="VBoxContainer" parent="unites"]
layout_mode = 2
alignment = 2

[node name="3" type="TextureRect" parent="unites/3"]
layout_mode = 2
texture = ExtResource("10_5kcm1")
expand_mode = 5

[node name="price" type="Label" parent="unites/3"]
custom_minimum_size = Vector2(57, 10)
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="4" type="VBoxContainer" parent="unites"]
layout_mode = 2
alignment = 2

[node name="4" type="TextureRect" parent="unites/4"]
layout_mode = 2
texture = ExtResource("11_p3ods")
expand_mode = 5

[node name="price" type="Label" parent="unites/4"]
custom_minimum_size = Vector2(57, 10)
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="5" type="VBoxContainer" parent="unites"]
layout_mode = 2
alignment = 2

[node name="img" type="TextureRect" parent="unites/5"]
layout_mode = 2
texture = ExtResource("12_6xjfn")
expand_mode = 5
stretch_mode = 6

[node name="price" type="Label" parent="unites/5"]
custom_minimum_size = Vector2(57, 10)
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="6" type="VBoxContainer" parent="unites"]
layout_mode = 2
alignment = 2

[node name="img" type="TextureRect" parent="unites/6"]
layout_mode = 2
texture = ExtResource("13_3f2py")
expand_mode = 5

[node name="price" type="Label" parent="unites/6"]
custom_minimum_size = Vector2(57, 10)
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="7" type="VBoxContainer" parent="unites"]
layout_mode = 2
alignment = 2

[node name="img" type="TextureRect" parent="unites/7"]
layout_mode = 2
texture = ExtResource("14_afgsm")
expand_mode = 5

[node name="price" type="Label" parent="unites/7"]
custom_minimum_size = Vector2(57, 10)
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="8" type="VBoxContainer" parent="unites"]
layout_mode = 2
alignment = 2

[node name="img" type="TextureRect" parent="unites/8"]
layout_mode = 2
texture = ExtResource("15_pi45k")
expand_mode = 5

[node name="price" type="Label" parent="unites/8"]
custom_minimum_size = Vector2(57, 10)
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="9" type="VBoxContainer" parent="unites"]
layout_mode = 2
alignment = 2

[node name="9" type="TextureRect" parent="unites/9"]
layout_mode = 2
texture = ExtResource("16_sjuuo")
expand_mode = 5

[node name="price" type="Label" parent="unites/9"]
custom_minimum_size = Vector2(57, 10)
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="selection" type="ColorRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -120.0
offset_right = 60.0
grow_vertical = 0
color = Color(1, 0.919, 0.19, 0.313726)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
